--- a/MadScientistLab/MadScientistLab/MadScientistLab.csproj
+++ b/MadScientistLab/MadScientistLab/MadScientistLab.csproj
@@ -42,6 +42,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cli\CommandInterface.cs" />
+    <Compile Include="Cli\CommandParser.cs" />
+    <Compile Include="Cli\ICommandInterface.cs" />
+    <Compile Include="Configuration\CliCommands.cs" />
+    <Compile Include="Configuration\CommonConstants.cs" />
+    <Compile Include="Enums\AnimalTypeEnum.cs" />
+    <Compile Include="LabInventory\Animals\Animal.cs" />
+    <Compile Include="LabInventory\Animals\Cat.cs" />
+    <Compile Include="LabInventory\Animals\Dog.cs" />
+    <Compile Include="LabInventory\Animals\Interfaces\IBarkable.cs" />
+    <Compile Include="LabInventory\Animals\Interfaces\IPurrable.cs" />
+    <Compile Include="LabInventory\Animals\Interfaces\ISqueakable.cs" />
+    <Compile Include="LabInventory\Animals\Lion.cs" />
+    <Compile Include="LabInventory\Animals\Mouse.cs" />
+    <Compile Include="LabInventory\Animals\Rat.cs" />
+    <Compile Include="LabInventory\Animals\Wolf.cs" />
+    <Compile Include="LabInventory\Laboratory.cs" />
+    <Compile Include="LabInventory\Machines\Barker.cs" />
+    <Compile Include="LabInventory\Machines\Purrer.cs" />
+    <Compile Include="LabInventory\Machines\Squeaker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
