--- a/MadScientistLab/MadScientistLab.csproj
+++ b/MadScientistLab/MadScientistLab.csproj
@@ -50,7 +50,9 @@
     <Compile Include="Enums\AnimalTypeEnum.cs" />
     <Compile Include="LabInventory\Animals\Animal.cs" />
     <Compile Include="LabInventory\Animals\Cat.cs" />
+    <Compile Include="LabInventory\Animals\Coyote.cs" />
     <Compile Include="LabInventory\Animals\Dog.cs" />
+    <Compile Include="LabInventory\Animals\Hamster.cs" />
     <Compile Include="LabInventory\Animals\Interfaces\IBarkable.cs" />
     <Compile Include="LabInventory\Animals\Interfaces\IPurrable.cs" />
     <Compile Include="LabInventory\Animals\Interfaces\ISqueakable.cs" />
